Added configuration to use only local files

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,6 @@
 # Define which packs should be loaded, "all" means loading all packs.
 loadpacks:
   - "all"
+
+# Only load language files from local drive.
+localload: false
